# web-labs

./: .gitignore
1/1/: index.html
1/2/: index.html
1/3/: index.html
1/4/: index.html
1/5/: index.html
2/: package-lock.json  package.json
2/public/: index.html
2/src/sass/: index.sass
3/1/: Player.js  index.html  index.js  package.json
3/2/: package-lock.json  package.json
3/2/src/: PascalTriangle.js  combination.js  factorial.js  index.js  range.js
3/3/: index.js
3/4/: index.js
4/1/html-validation/: index.html
4/1/js-validation/: index.css  index.html  index.js  package-lock.json  package.json
4/2/: Diagram.js  Enterprise.js  index.html  index.js  package-lock.json  package.json
5/: http.js  index.html  index.js  package-lock.json  package.json
6/1/: index.html  package-lock.json  package.json  server.js
6/2/: index.html
6/3/: index.css  index.html
7/: pyproject.toml
7/level1/: level1.py
7/level2/: index.html  level2.py
7/level3/: index.html
7/level4/: index.html  level4.py  timer.html
7/level5/: confirm.html  level5.py  signup.html  welcome.html
7/level6/: index.html  level6.py
8/: package-lock.json  package.json  webpack.config.js
8/public/: index.html
8/src/components/: App.js  Dashboard.css  Dashboard.js  LoginForm.js  Nav.css  Nav.js
