[tool.poetry]
name = "xss-game-master"
version = "0.1.0"
description = ""
authors = ["Yevhen Shymotyuk"]

[tool.poetry.dependencies]
python = "^3.7"
webapp3 = "^1.0.2"
paste = "^3.4.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
